# EventGo

./: README.md  app.py  constants.py  map.html  map.js  pyproject.toml
instance/: database.db  database.db-journal
static/css/: login.css  style.css
templates/: create_event.html  dashboard.html  login.html  map.html  register.html
