[tool.poetry]
name = "eventgo"
version = "0.1.0"
description = ""
authors = ["Hunter Bowie <hunterbowie2006@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-bcrypt = "^1.0.1"
flask-login = "^0.6.3"
flask-wtf = "^1.2.2"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
